--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <h1>Hello World</h1>
      <div id="map"style="width:600px; height:400px></div>
        <script>
-       var map = L.map('map').setView([25.76, -0.80.2], 12);</script>
-         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-  }).addTo(map);
+       var map = L.map('map').setView([25.76, -0.80.2], 12);
+       L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+          maxZoom: 19,
+          attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+      }).addTo(map);
+    </script>
   </body>
 </html>
