--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           maxZoom: 19,
           attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
       }).addTo(map);
-      L.geojson(mdc_hospitals).add To(map);
+      L.geoJson(mdc_hospitals).add To(map);
     </script>
   </body>
 </html>
